--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,43 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.abraaolima.safechat.safechat.SignInActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".screens.login.signin.SignInActivity">
 
-    <android.support.design.widget.CoordinatorLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="140dp"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appbarlayout"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+    </android.support.design.widget.AppBarLayout>
 
-        </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/content_signin" />
 
-        <include
-            android:id="@+id/content_signin"
-            layout="@layout/content_signin" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_sigin_show_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:tint="@color/white"
+        app:fabSize="normal"
+        app:layout_anchor="@id/appbarlayout"
+        app:layout_anchorGravity="bottom|end"
+        app:srcCompat="@drawable/ic_add_black_24dp" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_sigin_show_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            android:tint="@color/white"
-            app:fabSize="normal"
-            app:layout_anchor="@id/appbarlayout"
-            app:layout_anchorGravity="bottom|end"
-            app:srcCompat="@drawable/ic_add_black_24dp" />
-
-    </android.support.design.widget.CoordinatorLayout>
-</layout>
+</android.support.design.widget.CoordinatorLayout>
 
