--- a/app/src/main/res/layout/content_signin.xml
+++ b/app/src/main/res/layout/content_signin.xml
@@ -9,12 +9,13 @@
     tools:showIn="@layout/activity_signin">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:id="@+id/textInputLayout_signin_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="64dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="64dp"
+        android:transitionName="@string/transition_login_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -28,13 +29,14 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout2"
+        android:id="@+id/textInputLayout_signin_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
-        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        android:transitionName="@string/transition_login_password"
+        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_signin_email"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout_signin_email"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_signin_email"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -73,7 +75,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_signin_enter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_signin_password"
         app:layout_constraintVertical_bias="0.258"
         app:srcCompat="@drawable/google_plus_logo" />
 
@@ -101,6 +103,7 @@
         android:background="@color/colorPrimaryDark"
         android:text="@string/signin"
         android:textColor="@color/white"
+        android:transitionName="@string/transition_login_enter"
         app:layout_constraintBottom_toTopOf="@+id/lbl_signin_forgot_pass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
