--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#FFC107</color>
     <color name="colorAccent">#393939</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#444444</color>
+    <color name="black_transparent">#99444444</color>
+
 </resources>
